--- a/index.htm
+++ b/index.htm
@@ -206,6 +206,10 @@ Error message and password prompt
 
 <li>hubs</li>
 
+<li>iBGP</li>
+
+<li>IGP</li>
+
 <li>interdomain routing</li>
 
 <li>intradomain routing</li>
@@ -8526,9 +8530,9 @@ Error message and password prompt
 <pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
 <div created="20171029195647240" modified="20171029195655798" title="$:/state/tab/sidebar--1835078512">
-<pre>$:/core/ui/SideBar/Open</pre>
+<pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div list="[[routing table]] [[broadcast routing]] [[geocast routing]] [[multicast routing]] [[anycast routing]] [[unicast routing]] [[interdomain routing]] [[intradomain routing]] ASN [[AS (domain)]] [[TCP/IP suite]] latency [[MAC address]] [[IP address]] datagram hubs routing routers switches LAN servers clients" title="$:/StoryList">
+<div list="iBGP IGP" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8733,6 +8737,12 @@ Autonomous system numbers range from 1 to 64,511. When an ASN is needed, the nex
 </div>
 <div tags="" title="hubs">
 <pre></pre>
+</div>
+<div tags="" title="iBGP">
+<pre>Routes inside an AS to internal destinations.</pre>
+</div>
+<div tags="" title="IGP">
+<pre>Routes inside an AS to external destinations.</pre>
 </div>
 <div tags="" title="interdomain routing">
 <pre></pre>
