--- a/index.htm
+++ b/index.htm
@@ -220,6 +220,8 @@ Error message and password prompt
 
 <li>hubs</li>
 
+<li>IMAP - Internet Message Access Protocol</li>
+
 <li>interdomain routing</li>
 
 <li>internet layer</li>
@@ -230,9 +232,15 @@ Error message and password prompt
 
 <li>IP address prefix</li>
 
+<li>IPv4</li>
+
+<li>IPv6</li>
+
 <li>LAN</li>
 
 <li>latency</li>
+
+<li>LDAP - Lightweight Directory Access Protocol</li>
 
 <li>link layer</li>
 
@@ -240,9 +248,21 @@ Error message and password prompt
 
 <li>MAC address</li>
 
+<li>MGCP - Media Gateway Control Protocol</li>
+
 <li>multicast routing</li>
 
 <li>multihoming</li>
+
+<li>NNTP - Network News Transfer Protocol</li>
+
+<li>NTP - Network Time Protocol</li>
+
+<li>ONC/RPC - Open Network Computing Remote Procedure Call</li>
+
+<li>POP - Post Office Protocol</li>
+
+<li>RIP - Routing Information Protocol</li>
 
 <li>route aggregation</li>
 
@@ -252,7 +272,19 @@ Error message and password prompt
 
 <li>routing table</li>
 
+<li>RTP - Real-time Transfer Protocol</li>
+
+<li>RTSP - Real-time Streaming Protocol</li>
+
 <li>servers</li>
+
+<li>SIP - Session Initiation Protocol</li>
+
+<li>SMTP - Simple Mail Transfer Protocol</li>
+
+<li>SNMP - Simple Network Management Protocol</li>
+
+<li>SSH - Secure Shell</li>
 
 <li>subnet masks</li>
 
@@ -260,9 +292,15 @@ Error message and password prompt
 
 <li>TCP/IP suite</li>
 
+<li>Telnet protocol</li>
+
+<li>TLS - Transport Layer Security</li>
+
 <li>transport layer</li>
 
 <li>unicast routing</li>
+
+<li>XMPP</li>
 
 </ul>
 </p>
@@ -8558,7 +8596,7 @@ Error message and password prompt
 <div created="20171029195647240" modified="20171029195655798" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div list="[[HTTP - Hypertext Transfer Protocol]] [[FTP - File Transfer Protocol]] [[DNS - Domain Name System]] [[DHCP - Dynamic Host Configuration Protocol]] [[BGP - Border Gateway Protocol]]" title="$:/StoryList">
+<div list="IPv4" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8574,7 +8612,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file://dc01/Home/client27/Videos/index.htm&quot;
+            &quot;text&quot;: &quot;file://dc01/Home/client27/Downloads/index.htm&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -8594,7 +8632,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/Home/client27/Videos/index.htm&quot;
+            &quot;text&quot;: &quot;/Home/client27/Downloads/index.htm&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -8804,6 +8842,9 @@ CIDR is now the routing system used by virtually all gateway routers on the Inte
 <div tags="" title="hubs">
 <pre></pre>
 </div>
+<div tags="" title="IMAP - Internet Message Access Protocol">
+<pre></pre>
+</div>
 <div tags="" title="interdomain routing">
 <pre></pre>
 </div>
@@ -8830,10 +8871,19 @@ The standard syntax is to write the prefix bits that must match in dotted-quad f
 •208.130.28/24 means to match 11010000 10000010 00011100 as the first twenty four bits, and would match 208.130.28.1, 208.130.28.255, and everything in between. 
 </pre>
 </div>
+<div tags="" title="IPv4">
+<pre></pre>
+</div>
+<div tags="" title="IPv6">
+<pre></pre>
+</div>
 <div tags="" title="LAN">
 <pre></pre>
 </div>
 <div tags="" title="latency">
+<pre></pre>
+</div>
+<div tags="" title="LDAP - Lightweight Directory Access Protocol">
 <pre></pre>
 </div>
 <div tags="" title="link layer">
@@ -8855,6 +8905,9 @@ Forwarding tables often contain a default route, which has the shortest possible
 </pre>
 </div>
 <div tags="" title="MAC address">
+<pre></pre>
+</div>
+<div tags="" title="MGCP - Media Gateway Control Protocol">
 <pre></pre>
 </div>
 <div tags="" title="multicast routing">
@@ -8942,6 +8995,21 @@ Multihoming with multiple addresses has been implemented for IPv6.[6][10] For ou
 
 </pre>
 </div>
+<div tags="" title="NNTP - Network News Transfer Protocol">
+<pre></pre>
+</div>
+<div tags="" title="NTP - Network Time Protocol">
+<pre></pre>
+</div>
+<div tags="" title="ONC/RPC - Open Network Computing Remote Procedure Call">
+<pre></pre>
+</div>
+<div tags="" title="POP - Post Office Protocol">
+<pre></pre>
+</div>
+<div tags="" title="RIP - Routing Information Protocol">
+<pre></pre>
+</div>
 <div tags="" title="route aggregation">
 <pre>''Route aggregation is an alternate term for route summarization, which is a method used to minimize the number of routing tables required in an IP network.''
 
@@ -8960,6 +9028,12 @@ Route summarization offers several important advantages over flat routing. Route
 <div tags="" title="routing table">
 <pre></pre>
 </div>
+<div tags="" title="RTP - Real-time Transfer Protocol">
+<pre></pre>
+</div>
+<div tags="" title="RTSP - Real-time Streaming Protocol">
+<pre></pre>
+</div>
 <div tags="" title="servers">
 <pre>* database servers
 * file servers 
@@ -8968,6 +9042,18 @@ Route summarization offers several important advantages over flat routing. Route
 * web servers 
 * game servers
 * application servers</pre>
+</div>
+<div tags="" title="SIP - Session Initiation Protocol">
+<pre></pre>
+</div>
+<div tags="" title="SMTP - Simple Mail Transfer Protocol">
+<pre></pre>
+</div>
+<div tags="" title="SNMP - Simple Network Management Protocol">
+<pre></pre>
+</div>
+<div tags="" title="SSH - Secure Shell">
+<pre></pre>
 </div>
 <div tags="" title="subnet masks" type="text/vnd.tiddlywiki">
 <pre>''An IP address has two components, the network address and the host address. A subnet mask separates the IP address into the network and host addresses.'' 
@@ -9045,10 +9131,19 @@ With an introduction of CIDR addressing scheme, IP addresses are more efficientl
 <div tags="" title="TCP/IP suite">
 <pre></pre>
 </div>
+<div tags="" title="Telnet protocol">
+<pre></pre>
+</div>
+<div tags="" title="TLS - Transport Layer Security">
+<pre></pre>
+</div>
 <div tags="" title="transport layer">
 <pre></pre>
 </div>
 <div tags="" title="unicast routing">
+<pre></pre>
+</div>
+<div tags="" title="XMPP">
 <pre></pre>
 </div>
 
